<resources>
    <string name="app_name">Der Die Das</string>
    <string name="full_words_title">Fully Learned</string>
    <string name="full_words_text">\"Fully learned words\" means nouns that have been answered correctly 5 times in a row. They are then considered \"fully learned\" and don\'t appear anymore in the practice screen. The ultimate goal should be to \"fully learn\" all nouns.\n\nIf a noun is answered correctly, but then incorrectly before achieving 5 times in a row, it is reset back to 0 and the process of getting 5 times in a row starts again for that noun.</string>
    <string name="help">Help</string>
    <string name="fully_learned_words_all_words">Fully learned words / All words:</string>
    <string name="practice">Practice</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="placeholder">123 / 456</string>
    <string name="noun_placeholder">Bundeswirtschaftsministerium</string>
    <string name="der">Der</string>
    <string name="das">Das</string>
    <string name="die">Die</string>
    <string name="prefs_theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System\'s theme</string>
    <string name="prefs_language">Language</string>
    <string name="prefs_language_system">System default</string>
    <string name="finished">Fully learned all nouns, want to start over?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="Jahr">Year</string>
    <string name="Uhr">Clock</string>
    <string name="Prozent">Percent</string>
    <string name="Zeit">Time</string>
    <string name="Kind">Kid</string>
    <string name="Euro">Euro</string>
    <string name="Tag">Day</string>
    <string name="Frau">Woman</string>
    <string name="Mensch">Human</string>
    <string name="Stadt">City</string>
    <string name="Land">Country</string>
    <string name="Mann">Man</string>
    <string name="Ende">End</string>
    <string name="Woche">Week</string>
    <string name="Platz">Space/Place</string>
    <string name="Spiel">Game</string>
    <string name="Seite">Side</string>
    <string name="Haus">House</string>
    <string name="Samstag">Saturday</string>
    <string name="Sonntag">Sunday</string>
    <string name="Leben">Life</string>
    <string name="Million">Million</string>
    <string name="Mark">Mark</string>
    <string name="Frage">Question</string>
    <string name="Teil">Item</string>
    <string name="Arbeit">Work</string>
    <string name="Bild">Image/Picture</string>
    <string name="Fall">Case/Fall</string>
    <string name="Weg">Path</string>
    <string name="Mai">May</string>
    <string name="Gemeinde">Community</string>
    <string name="Thema">Topic</string>
    <string name="Geschichte">Story/History</string>
    <string name="Welt">World</string>
    <string name="Mitglied">Member</string>
    <string name="Straße">Street</string>
    <string name="Monat">Month</string>
    <string name="Grund">Cause/Foundations</string>
    <string name="Freitag">Friday</string>
    <string name="Name">Name</string>
    <string name="Artikel">Article</string>
    <string name="Punkt">Point</string>
    <string name="Verein">Club</string>
    <string name="Minute">Minute</string>
    <string name="Polizei">Police</string>
    <string name="September">September</string>
    <string name="Problem">Problem</string>
    <string name="Unternehmen">Company</string>
    <string name="Patentamt">Patent office</string>
    <string name="Familie">Family</string>
    <string name="Juni">June</string>
    <string name="März">March</string>
    <string name="Oktober">October</string>
    <string name="Präsident">President</string>
    <string name="Schule">School</string>
    <string name="Ort">Place/Location</string>
    <string name="Geld">Money</string>
    <string name="Team">Team</string>
    <string name="Gast">Guest</string>
    <string name="Gruppe">Group</string>
    <string name="Beispiel">Example</string>
    <string name="Mannschaft">Squad</string>
    <string name="Stunde">Hour</string>
    <string name="November">November</string>
    <string name="Film">Film</string>
    <string name="Ziel">Aim/Goal</string>
    <string name="Meter">Meter</string>
    <string name="Mittwoch">Wednesday</string>
    <string name="April">April</string>
    <string name="August">August</string>
    <string name="Montag">Monday</string>
    <string name="Kirche">Church</string>
    <string name="Juli">July</string>
    <string name="Foto">Photo</string>
    <string name="Regierung">Government</string>
    <string name="Erfolg">Success</string>
    <string name="Donnerstag">Thursday</string>
    <string name="Sieg">Victory</string>
    <string name="Partei">Party(pol.)</string>
    <string name="Trainer">Trainer</string>
    <string name="Januar">January</string>
    <string name="Wort">Word</string>
    <string name="Tor">Gate</string>
    <string name="Programm">Program</string>
    <string name="Zahl">Number</string>
    <string name="Dezember">December</string>
    <string name="Projekt">Project</string>
    <string name="Dienstag">Tuesday</string>
    <string name="Werk">Plant(ind.)/Work/Oeuvre</string>
    <string name="Information">Information</string>
    <string name="Art">Kind/Manner</string>
    <string name="Region">Region</string>
    <string name="Hand">Hand</string>
    <string name="Buch">Book</string>
    <string name="Staat">State</string>
    <string name="Preis">Price</string>
    <string name="Februar">February</string>
    <string name="Schüler">Pupil</string>
    <string name="Anfang">Start</string>
    <string name="Chance">Chance</string>
    <string name="Person">Person</string>
    <string name="Kreis">Circle/District</string>
    <string name="Herr">Mr.</string>
    <string name="Mitarbeiter">Employee/Colleague</string>
    <string name="Musik">Music</string>
    <string name="Ergebnis">Result</string>
    <string name="Bereich">Range</string>
    <string name="Jahrhundert">Centuary</string>
    <string name="Vorsitzende">Chairwoman</string>
    <string name="Angabe">Declaration/Statement</string>
    <string name="Saison">Season</string>
    <string name="Gespräch">Talk</string>
    <string name="Auto">Car</string>
    <string name="Titel">Title</string>
    <string name="Band">Band</string>
    <string name="Abend">Evening</string>
    <string name="Zukunft">Future</string>
    <string name="Einsatz">Deployment</string>
    <string name="Firma">Firm</string>
    <string name="Bürgermeister">Mayoral</string>
    <string name="Diskussion">Discussion</string>
    <string name="Folge">Consequence</string>
    <string name="Möglichkeit">Possibility</string>
    <string name="Spieler">Player</string>
    <string name="Entscheidung">Decision</string>
    <string name="Stelle">Position</string>
    <string name="Wahl">Choice/Election</string>
    <string name="Zeitung">Newspaper</string>
    <string name="Jugendliche">Youth/Teenager</string>
    <string name="Weblink">Weblink</string>
    <string name="Raum">Space/Room</string>
    <string name="Mutter">Mother</string>
    <string name="Entwicklung">Development/Progress</string>
    <string name="Vater">Father</string>
    <string name="Besucher">Visitor</string>
    <string name="Bürger">Citizen</string>
    <string name="Stück">Piece</string>
    <string name="Bank">Bank(fin.)/Bench</string>
    <string name="Grüne">Green</string>
    <string name="Sache">Thing/Matter</string>
    <string name="Politik">Politics/Policy</string>
    <string name="Wochenende">Week end</string>
    <string name="Hilfe">Help</string>
    <string name="Telefon">Telephone</string>
    <string name="Beginn">Begin</string>
    <string name="Angebot">Offer</string>
    <string name="Rolle">Role</string>
    <string name="Beitrag">Contribution</string>
    <string name="Ausstellung">Exhibition</string>
    <string name="Freund">Friend</string>
    <string name="Höhe">Height</string>
    <string name="Nacht">Night</string>
    <string name="Fußball">Football</string>
    <string name="Veranstaltung">Event</string>
    <string name="Mitte">Middle</string>
    <string name="Gesellschaft">Society</string>
    <string name="Autor">Author/Writer</string>
    <string name="Markt">Market</string>
    <string name="Form">Shape/Figure</string>
    <string name="Sohn">Son</string>
    <string name="Maßnahme">Measure</string>
    <string name="Aufgabe">Task</string>
    <string name="Blick">Glimpse</string>
    <string name="Amt">Department</string>
    <string name="Chef">Boss/Chief</string>
    <string name="Auge">Eye</string>
    <string name="Politiker">Politician</string>
    <string name="Klasse">Grade</string>
    <string name="Betrieb">Service/Enterprise</string>
    <string name="Leistung">Performance</string>
    <string name="Kilometer">Kilometer</string>
    <string name="Stimme">Voice</string>
    <string name="Richtung">Direction</string>
    <string name="Tod">Death</string>
    <string name="Literatur">Literature</string>
    <string name="Recht">Right</string>
    <string name="Interesse">Interest</string>
    <string name="Wasser">Water</string>
    <string name="Krieg">War</string>
    <string name="Kunst">Art</string>
    <string name="Kopf">Head</string>
    <string name="Rahmen">Frame/Edge</string>
    <string name="Internet">Internet</string>
    <string name="Milliarde">Billion</string>
    <string name="Idee">Idea</string>
    <string name="Zuschauer">Spectator</string>
    <string name="Führung">Leadership</string>
    <string name="Kritik">Critic</string>
    <string name="Universität">University</string>
    <string name="Dollar">Dollar</string>
    <string name="Lage">Location</string>
    <string name="Mädchen">Girl</string>
    <string name="Kraft">Strength</string>
    <string name="Sinn">Sense</string>
    <string name="Bau">Construction/Structure</string>
    <string name="Bericht">Report</string>
    <string name="Verfügung">Disposition</string>
    <string name="Situation">Situation</string>
    <string name="Publikum">Audience/Crowd</string>
    <string name="Opfer">Victim</string>
    <string name="Zug">Train</string>
    <string name="Museum">Museum</string>
    <string name="Konzert">Concert</string>
    <string name="Wirtschaft">Economy</string>
    <string name="Wert">Value</string>
    <string name="Karte">Card</string>
    <string name="Kunde">Customer</string>
    <string name="Kampf">Struggle/Combat</string>
    <string name="Bühne">Stage</string>
    <string name="Schweizer">Swiss</string>
    <string name="Satz">Sentence/Set</string>
    <string name="Quelle">Source/Spring</string>
    <string name="Tochter">Daughter</string>
    <string name="Text">Text</string>
    <string name="Sommer">Summer</string>
    <string name="Bad">Bath</string>
    <string name="Gericht">Court/Dish</string>
    <string name="Aktion">Action/Campaign</string>
    <string name="Grenze">Border</string>
    <string name="Klub">Club</string>
    <string name="Kontakt">Contact</string>
    <string name="Künstler">Artist</string>
    <string name="Bevölkerung">Population</string>
    <string name="Verlag">Publisher</string>
    <string name="Plan">Plan</string>
    <string name="Bund">Association/Bundle</string>
    <string name="Tier">Animal</string>
    <string name="Theater">Theater</string>
    <string name="Meinung">Opinion</string>
    <string name="Schritt">Step</string>
    <string name="Gebiet">Territory</string>
    <string name="Geschäft">Shop/Business</string>
    <string name="Gebäude">Building</string>
    <string name="Partie">Party</string>
    <string name="Sprache">Language</string>
    <string name="Kultur">Culture</string>
    <string name="Teilnehmer">Participant</string>
</resources>