<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/practice"
        style="@style/Button.Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/practice" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stats"
        style="@style/Button.Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        style="@style/Button.Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />
</androidx.appcompat.widget.LinearLayoutCompat>