<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nounView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@string/noun_placeholder"
            android:textColor="?buttonTextNormal"
            android:textSize="50sp"
            app:autoSizeTextType="uniform" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/m"
            style="@style/Button.Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/buttonDrawable"
            android:text="@string/der"
            android:textColor="@drawable/selectors_text_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/f"
            style="@style/Button.Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/buttonDrawable"
            android:text="@string/die"
            android:textColor="@drawable/selectors_text_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/n"
            style="@style/Button.Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/buttonDrawable"
            android:text="@string/das"
            android:textColor="@drawable/selectors_text_color" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
